--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,11 @@
     <packaging>jar</packaging>
     <dependencies>
         <dependency>
+            <groupId>com.opencagedata</groupId>
+            <artifactId>jopencage</artifactId>
+            <version>2.2.2</version>
+        </dependency>
+        <dependency>
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
             <version>1.2</version>
