--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,11 @@
     <packaging>jar</packaging>
     <dependencies>
         <dependency>
+            <groupId>org.hibernate.orm</groupId>
+            <artifactId>hibernate-spatial</artifactId>
+            <version>7.0.0.Final</version>
+        </dependency>
+        <dependency>
             <groupId>com.opencagedata</groupId>
             <artifactId>jopencage</artifactId>
             <version>2.2.2</version>
@@ -35,14 +40,18 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>5.6.15.Final</version>
+            <version>7.0.0.Final</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>9.2.0</version>
+        </dependency>
         <!-- API de JPA -->
         <dependency>
             <groupId>jakarta.persistence</groupId>
             <artifactId>jakarta.persistence-api</artifactId>
-            <version>3.0.0</version>
+            <version>3.2.0</version>
         </dependency>
     </dependencies>
     <properties>
